# Denoiser

./: .gitignore  CMakeLists.txt
src/: CornellBox.mtl  common.h  lighting.cpp  lighting.h  main.cpp  renderer.cpp  renderer.h
